added checked pseudo state

--- a/calculator-app-main/css/style.css
+++ b/calculator-app-main/css/style.css
@@ -60,7 +60,7 @@ main {
   opacity: 0;
   cursor: pointer;
 }
-.calc-container header .theme-toggler .input-container .input.active {
+.calc-container header .theme-toggler .input-container .input:checked {
   opacity: 1;
 }
 .calc-container .screen {
