--- a/calculator-app-main/scss/style.scss
+++ b/calculator-app-main/scss/style.scss
@@ -64,7 +64,7 @@ main {
           cursor: pointer;
         }
 
-        .input.active {
+        .input:checked {
           opacity: 1;
         }
 
