--- a/calculator-app-main/scss/_themes.scss
+++ b/calculator-app-main/scss/_themes.scss
@@ -1,36 +1,36 @@
-// $mainBackground: hsl(222, 26%, 31%);
-// $keypad_toggle_Background: hsl(223, 31%, 20%);
-// $screenBackground: hsl(224, 36%, 15%);
+$mainBackground: hsl(222, 26%, 31%);
+$keypad_toggle_Background: hsl(223, 31%, 20%);
+$screenBackground: hsl(224, 36%, 15%);
 
-// $removeKeyBackground: hsl(225, 21%, 49%);
-// $removeKeyShadow: hsl(224, 28%, 35%);
+$removeKeyBackground: hsl(225, 21%, 49%);
+$removeKeyShadow: hsl(224, 28%, 35%);
 
-// $equal_toggle_KeyBackground: hsl(6, 63%, 50%);
-// $equalKeyShadow: hsl(6, 70%, 34%);
+$equal_toggle_KeyBackground: hsl(6, 63%, 50%);
+$equalKeyShadow: hsl(6, 70%, 34%);
 
-// $normalKeyBackground: hsl(30, 25%, 89%);
-// $normalKeyShadow: hsl(28, 16%, 65%);
+$normalKeyBackground: hsl(30, 25%, 89%);
+$normalKeyShadow: hsl(28, 16%, 65%);
 
-// $normalKeyText: hsl(221, 14%, 31%);
-// $default: hsl(0, 0, 100%);
+$normalKeyText: hsl(221, 14%, 31%);
+$default: hsl(0, 0, 100%);
 
-.dark {
-  $mainBackground: hsl(222, 26%, 31%);
-  $keypad_toggle_Background: hsl(223, 31%, 20%);
-  $screenBackground: hsl(224, 36%, 15%);
+// .dark {
+//   $mainBackground: hsl(222, 26%, 31%);
+//   $keypad_toggle_Background: hsl(223, 31%, 20%);
+//   $screenBackground: hsl(224, 36%, 15%);
 
-  $removeKeyBackground: hsl(225, 21%, 49%);
-  $removeKeyShadow: hsl(224, 28%, 35%);
+//   $removeKeyBackground: hsl(225, 21%, 49%);
+//   $removeKeyShadow: hsl(224, 28%, 35%);
 
-  $equal_toggle_KeyBackground: hsl(6, 63%, 50%);
-  $equalKeyShadow: hsl(6, 70%, 34%);
+//   $equal_toggle_KeyBackground: hsl(6, 63%, 50%);
+//   $equalKeyShadow: hsl(6, 70%, 34%);
 
-  $normalKeyBackground: hsl(30, 25%, 89%);
-  $normalKeyShadow: hsl(28, 16%, 65%);
+//   $normalKeyBackground: hsl(30, 25%, 89%);
+//   $normalKeyShadow: hsl(28, 16%, 65%);
 
-  $normalKeyText: hsl(221, 14%, 31%);
-  $default: hsl(0, 0, 100%);
-}
+//   $normalKeyText: hsl(221, 14%, 31%);
+//   $default: hsl(0, 0, 100%);
+// }
 // .light {
 //   $mainBackground: hsl(0, 0%, 90%);
 //   $keypad_toggle_Background: hsl(0, 5%, 81%);
