--- a/calculator-app-main/scss/style.scss
+++ b/calculator-app-main/scss/style.scss
@@ -68,6 +68,10 @@ main {
         .input:checked {
           opacity: 1;
         }
+
+        // .input.active {
+        //   opacity: 1;
+        // }
       }
     }
   }
